# ownmail

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  ROADMAP.md  config.example.yaml  gmail_archive.py  ownmail.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
ownmail/: __init__.py  __main__.py  archive.py  cli.py  commands.py  config.py  database.py  keychain.py  parser.py  query.py  web.py  yaml_util.py
ownmail/providers/: __init__.py  base.py  gmail.py  imap.py
ownmail/sanitizer/: __init__.py  package.json  worker.js
ownmail/static/: style.css
ownmail/templates/: base.html  email.html  help.html  search.html  settings.html
scripts/: audit_encoding.py  create_fixtures.py  migrate_email_columns.py  publish.sh  strip_labels.py
tests/: __init__.py  conftest.py  test_additional_coverage.py  test_archive.py  test_cli.py  test_commands.py  test_config.py  test_coverage_boost.py  test_database.py  test_fixtures.py  test_gmail_provider.py  test_imap_provider.py  test_integration.py  test_keychain.py  test_main.py  test_parser.py  test_query.py  test_sanitizer.py  test_web.py
tests/fixtures/: cp949_as_euc_kr.eml  digest_email.eml  euc_kr_declared_as_utf8.eml  euc_kr_declared_correctly.eml  html_only.eml  korean_encoded.eml  korean_weekday_prefix.eml  minimal_headers.eml  mixed_charset_parts.eml  mostly_readable.eml  multipart_alternative.eml  nested_rfc822.eml  no_date_header.eml  numeric_month_format.eml  quoted_printable.eml  quoted_reply.eml  raw_8bit_headers.eml  simple_plain.eml  split_multibyte_rfc2047.eml  truncated_multipart.eml  unknown_charset.eml  with_attachment.eml  with_inline_image.eml
