[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ownmail"
version = "0.1.0"
description = "Own your mail. A file-based email backup and search tool."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Chungmin Lee" }
]
keywords = ["email", "backup", "gmail", "archive", "search", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "keyring>=24.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
ownmail = "ownmail:main"

[project.urls]
Homepage = "https://github.com/chungmin/ownmail"
Repository = "https://github.com/chungmin/ownmail"
Issues = "https://github.com/chungmin/ownmail/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "ownmail.py",
    "README.md",
    "LICENSE",
]
